Criado através do Colab

--- a/População_LGBT_Comparativo_Anual.ipynb
+++ b/População_LGBT_Comparativo_Anual.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAY4F/7tPa2/DCTeyQh8o8",
+      "authorship_tag": "ABX9TyOMfYWKNWpBngIj4AZNtnRD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,34 +66,13 @@
         "    print(\"Dados carregados com sucesso!\")\n",
         "    print(df.head())\n",
         "except Exception as e:\n",
-        "    print(f\"Erro ao carregar os dados: {e}\")\n",
-        "\n",
-        "# --- Preparação Teórica para o KNN ---\n",
-        "# O KNN exige que os dados sejam numéricos e estejam na mesma escala."
+        "    print(f\"Erro ao carregar os dados: {e}\")\n"
       ],
       "metadata": {
-        "id": "pSVjim3hDORK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "546ec251-f041-4f46-8dd8-4496c51faf9e"
+        "id": "pSVjim3hDORK"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Dados carregados com sucesso!\n",
-            "             ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n",
-            "0  ,\"Disque 100 - Ano 2012 - Comparativo 2011/201...\n",
-            "1  ,UF,2011,2012,% de aumento,,UF,2012,2013,% de ...\n",
-            "2  ,AC,2,10,400%,,AC,10,4,-60%,,AC,4,7,75%,,AC,7,...\n",
-            "3  ,AL,17,63,270.588235294118%,,AL,63,16,-74.6031...\n",
-            "4  ,AM,13,60,361.538461538462%,,AM,60,33,-45%,,AM...\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
