Criado através do Colab

--- a/População_LGBT_Comparativo_Anual.ipynb
+++ b/População_LGBT_Comparativo_Anual.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMfYWKNWpBngIj4AZNtnRD",
+      "authorship_tag": "ABX9TyPoi6Dpl1rtQQU7WGWpmwAV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **What this dataset means ?**\n",
+        "\n",
+        "The dataset available in the link above contains records of complaints related to human rights violations against the LGBTI+ population over the years in Brazil."
+      ],
+      "metadata": {
+        "id": "FjKIEIEXe7Om"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "###############################################################\n",
@@ -58,21 +69,107 @@
         "###############################################################\n",
         "\n",
         "# 1. Carregar o arquivo diretamente da URL\n",
-        "url = \"https://www.gov.br/mdh/pt-br/acesso-a-informacao/dados-abertos/disque100/balanco-geral-2011-a-2019-populacao-lgbt/populacao-lgbt-comparativo-anual.csv/@@download/file\"\n",
+        "LGBT_pop = \"https://www.gov.br/mdh/pt-br/acesso-a-informacao/dados-abertos/disque100/balanco-geral-2011-a-2019-populacao-lgbt/populacao-lgbt-comparativo-anual.csv/@@download/file\"\n",
         "\n",
         "try:\n",
         "    # Nota: Arquivos do governo costumam usar codificação 'latin-1' ou 'utf-8' e separador ';'\n",
-        "    df = pd.read_csv(url, sep=';', encoding='latin-1')\n",
+        "    df = pd.read_csv(LGBT_pop, sep=';', encoding='latin-1')\n",
         "    print(\"Dados carregados com sucesso!\")\n",
         "    print(df.head())\n",
         "except Exception as e:\n",
         "    print(f\"Erro ao carregar os dados: {e}\")\n"
       ],
       "metadata": {
-        "id": "pSVjim3hDORK"
+        "id": "pSVjim3hDORK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e68cfce-8dec-4c8b-ea96-89ff17668c10"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dados carregados com sucesso!\n",
+            "             ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n",
+            "0  ,\"Disque 100 - Ano 2012 - Comparativo 2011/201...\n",
+            "1  ,UF,2011,2012,% de aumento,,UF,2012,2013,% de ...\n",
+            "2  ,AC,2,10,400%,,AC,10,4,-60%,,AC,4,7,75%,,AC,7,...\n",
+            "3  ,AL,17,63,270.588235294118%,,AL,63,16,-74.6031...\n",
+            "4  ,AM,13,60,361.538461538462%,,AM,60,33,-45%,,AM...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#####################################################################\n",
+        "########## STEP II\n",
+        "########## Checking a General Info from the Dataset\n",
+        "#####################################################################\n",
+        "\n",
+        "LGBT_pop.info()\n",
+        "\n",
+        "#####################################################################\n",
+        "########## STEP 3\n",
+        "########## Checking if there are missing values\n",
+        "#####################################################################\n",
+        "\n",
+        "# Step 2: Check for missing values\n",
+        "print(\"\\n\")\n",
+        "print(\"Checking if there are missing values:\")\n",
+        "print(\"\\n\")\n",
+        "print(Breast_Cancer.isnull().sum())\n",
+        "\n",
+        "\n",
+        "\n",
+        "#####################################################################\n",
+        "########## STEP 4\n",
+        "########## Removing the column unnecessary\n",
+        "#####################################################################\n",
+        "\n",
+        "Breast_Cancer = pd.read_csv('/content/k-Nearest Neighbors/KNNAlgorithmDataset.csv')\n",
+        "\n",
+        "# Per the previous result, there is a column 33 with no valid value\n",
+        "# In this case, let's remove them.\n",
+        "\n",
+        "# Corrected line: Remove 'inplace=True' and reassign the new DataFrame.\n",
+        "Breast_Cancer = Breast_Cancer.drop('Unnamed: 32', axis=1)\n",
+        "\n",
+        "# Step 3: Check for missing values again\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "print(\"Checking if there are missing values:\")\n",
+        "print(\"\\n\")\n",
+        "print(Breast_Cancer.isnull().sum())\n",
+        "\n",
+        "# Right now, we don't have more NULL variances"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 218
+        },
+        "id": "0CHAPFb_KQcU",
+        "outputId": "396b73af-4791-4ab3-aea4-e38f27a9ef3f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'str' object has no attribute 'info'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3271019981.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#####################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mLGBT_pop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#####################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'info'"
+          ]
+        }
+      ]
     }
   ]
 }
