Criado através do Colab

--- a/População_LGBT_Comparativo_Anual.ipynb
+++ b/População_LGBT_Comparativo_Anual.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqqWUZ0lXsapC7s13DbaY1",
+      "authorship_tag": "ABX9TyN+oaAkH6AyjwUwP6VxCeiB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,16 +49,26 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# **What this dataset means ?**\n",
+        "\n",
+        "# The dataset available in the link above contains records of complaints related to\n",
+        "# human rights violations against the LGBTI+ population over the years in Brazil.\n"
+      ],
+      "metadata": {
+        "id": "kOBQXTE_heaB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "##################################################\n",
-        "##################################################\n",
         "# **What this dataset means ?**\n",
         "\n",
         "The dataset available in the link above contains records of complaints related to human rights violations against the LGBTI+ population over the years in Brazil.\n",
-        "\n",
-        "##################################################\n",
-        "##################################################"
+        "\n"
       ],
       "metadata": {
         "id": "FjKIEIEXe7Om"
